2006-05-10  John W. Eaton  <jwe@octave.org>

	* pkg/pkg.m: New file.

2006-05-09  Keith Goodman  <kwgoodman@gmail.com>

	* plot/plot.m: Doc string fix.

2006-05-09  Paul Kienzle  <pkienzle@users.sf.net>

	* testfun/speeed.m: Use new interface to unique and assert.
	Improve documentation.  Approximate time complexity from log-log
	plot.  Return time complexity and raw times if requested.  The
	mean ratio is no longer returned.  Provide complete control over
	which n are computed.

2006-05-09  John W. Eaton  <jwe@octave.org>

	* path/path.m: Move here from miscellaneous.
	Adapt to new LOADPATH definition.

2006-05-03  David Bateman  <dbateman@free.fr>

	* path/rmpath.m, path/addpath.m, miscellaneous/path.m: Replace all
	explicit uses of a path seperation character with pathsep().

2006-05-03  Bob Weigel <rweigel@gmu.edu>

        * scripts/set/setdiff.m: New arg, byrows.  New tests.

2006-04-29  John W. Eaton  <jwe@octave.org>

	* startup/main-rcfile: Disable some warnings.

2006-04-14  Bill Denney  <denney@seas.upenn.edu>

 	* strings/strcmpi.m: Return false instead of error if args are not
	char or cellstr.

2006-04-10  John W. Eaton  <jwe@octave.org>

	* miscellaneous/dir.m: Ensure that returned structure array is
	Nx1, not 1xN.

2006-04-06  Olli Saarela  <olli.saarela@kcl.fi>

	* plot/hist.m: Ignore NaN in inputs.

2006-04-06  Keith Goodman  <kwgoodman@gmail.com>

	* miscellaneous/mkoctfile.m: Doc string fix.

2006-04-05  John W. Eaton  <jwe@octave.org>

	* plot/__plt2__.m: Return data = [] and fmtstr = "" if x1 and x2
	are both empty.
	* plot/__plt__.m: Ignore empty data and format strings returned
	from __plt1__ or __plt2__.

2006-04-04  Bob Weigel  <rweigel@gmu.edu>

        * scripts/set/unique.m: Properly handle single column input when
	"rows" is specified.

2006-04-04  John W. Eaton  <jwe@octave.org>

	* path/setpath.m: New file.
	* path/savepath.m: Use setpath to set path instead of assigning
	directly to LOADPATH.
